--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   </section>
 </footer>
 
-<script src="./sw.js"></script>
+<script src="https://kokinz.github.io/1569955-cinemaddict-14/public/sw.js"></script>
 <script src="./bundle.js"></script>
 </body>
 </html>
