--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="canonical" href="https://kokinz.github.io/1569955-cinemaddict-14/public/"/>
+  <link rel="canonical" href="https://kokinz.github.io/1569955-cinemaddict-14/public/" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/normalize.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
 
@@ -27,7 +27,7 @@
   </section>
 </footer>
 
-<script src="https://kokinz.github.io/1569955-cinemaddict-14/public/sw.js"></script>
+<script src="./sw.js"></script>
 <script src="./bundle.js"></script>
 </body>
 </html>
